<resources>
    <string name="app_name">Check Weather</string>
    <string name="type_of_weather">Type of Weather</string>
    <string name="search">Search</string>
    <string name="enter_the_location">Enter the location</string>
    <string name="icon">Icon</string>
    <string name="_33_c">Temperature</string>
    <string name="weather_app">Weather App</string>
    <string name="location">Location</string>
    <string name="error_message">Please check spelling</string>
    <string name="welcome">WELCOME</string>
    <string name="welcome_to">Welcome To</string>
    <string name="_7_days_forecast">7 days forecast</string>
</resources>